# allele_qc

./: .dockerignore  .gitignore  Dockerfile  LICENSE  a.tsv  allele_auto_fix.py  allele_autofix2.py  allele_fixes.py  allele_qc.py  allele_syntax.py  allele_transvar.py  amend_errors.py  api.py  build_alignment_dict.py  build_alignment_dict2.py  build_alignment_dict_from_genome.py  build_alignment_dict_from_peptides.py  check_manual_changes.py  common_autofix_functions.py  compare_genomes.py  config.json  controls_coordinate_changes.py  convert_some_coords.py  convert_some_coords2.py  convert_some_coords3.py  correct_coordinate_changes.py  ctd_support.py  docker_start.sh  dummy.py  dummy.tsv  extra_controls.py  filter_alleles_pombase.py  fix_change_log_data.sh  fix_coordinates.py  format_alleles.py  format_alleles_sgd.py  format_sequences.py  generate_mutant_protein_sequences.py  genome_functions.py  get_allele_autofix.py  (+44 more)
allele_changes_pombase/: formatted_manual_changes.tsv
change_log/: allele_auto_fix_03082023.tsv  allele_auto_fix_19042023.tsv  allele_auto_fix_old2new_10082023.tsv  allele_manual_changes_formatted_03082023.tsv  allele_manual_changes_formatted_where_description_was_in_name_29062023.tsv  count_changes.py  fixes_applied_external_data.tsv  make_temporary_changed_names.py  manual_cannot_fix_new_03082023.tsv  protein_modification_auto_fix_14082023.tsv  protein_modification_auto_fix_external_data_21032023.tsv  protein_modification_residues_not_in_new_gene_structure_issue62_14072023.tsv  removed_alleles_05072023.tsv  retroactive_fix_name_in_description.py  (+1 more)
(+82 files in other folders)
