[project]
name = "allele_qc"

[tool.poetry]
authors = ["Manuel Lera Ramirez <manulera14@gmail.com>"]
description = ""
name = "allele_qc"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.9"
biopython = "^1.79"
pydantic = "^1.10.2"
pandas = "^1.5.0"
openpyxl = "^3.0.10"
fastapi = "^0.87.0"
uvicorn = {extras = ["standard"], version = "^0.19.0"}
regex = "^2022.10.31"
requests = "^2.31.0"
httpx = "^0.24.0"
transvar = "^2.5.10.20211024"
tqdm = "^4.65.1"

[tool.poetry.dev-dependencies]
flake8 = "^5.0.4"
autopep8 = "^1.7.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
